src/tests/call_expression/snapshots/monkey_interpreter__tests__call_expression__test_call_expression_case_10_environment.snap
---
source: src/tests/call_expression/mod.rs
expression: evaluator
---
Evaluator {
    environment: Environment {
        variables: {},
        sub_environment: None,
    },
}
