src/tests/call_expression/snapshots/monkey_interpreter__tests__call_expression__test_call_expression_case_10_lexical_analysis.snap
---
source: src/tests/call_expression/mod.rs
expression: tokens
---
[
    Function,
    OpeningRoundBracket,
    ClosingRoundBracket,
    OpeningCurlyBracket,
    Return,
    Integer {
        literal: 5,
    },
    SemiColon,
    ClosingCurlyBracket,
    OpeningRoundBracket,
    ClosingRoundBracket,
    Plus,
    Integer {
        literal: 1,
    },
    SemiColon,
]
