src/tests/call_expression/snapshots/monkey_interpreter__tests__call_expression__test_call_expression_case_11_environment.snap
---
source: src/tests/call_expression/mod.rs
expression: evaluator
---
Evaluator {
    environment: Environment {
        variables: {
            "factorial": Function {
                parameters: [
                    "n",
                ],
                block: Block {
                    nodes: [
                        Expression {
                            expression: If {
                                condition: Infix {
                                    left_hand: Identifier {
                                        identifier: "n",
                                    },
                                    operator: LesserThan,
                                    right_hand: Integer {
                                        literal: 2,
                                    },
                                },
                                consequence: Block {
                                    nodes: [
                                        Statement {
                                            statement: Return {
                                                expression: Integer {
                                                    literal: 1,
                                                },
                                            },
                                        },
                                    ],
                                },
                                alternative: None,
                            },
                        },
                        Statement {
                            statement: Return {
                                expression: Infix {
                                    left_hand: Identifier {
                                        identifier: "n",
                                    },
                                    operator: Multiply,
                                    right_hand: Call {
                                        function: Identifier {
                                            identifier: "factorial",
                                        },
                                        arguments: [
                                            Infix {
                                                left_hand: Identifier {
                                                    identifier: "n",
                                                },
                                                operator: Minus,
                                                right_hand: Integer {
                                                    literal: 1,
                                                },
                                            },
                                        ],
                                    },
                                },
                            },
                        },
                    ],
                },
            },
        },
        sub_environment: None,
    },
}
