src/tests/call_expression/snapshots/monkey_interpreter__tests__call_expression__test_call_expression_case_11_evaluation.snap
---
source: src/tests/call_expression/mod.rs
expression: evaluation
---
Integer {
    value: 120,
}
