src/tests/call_expression/snapshots/monkey_interpreter__tests__call_expression__test_call_expression_case_12_environment.snap
---
source: src/tests/call_expression/mod.rs
expression: evaluator
---
Evaluator {
    environment: Environment {
        variables: {
            "outer": Function {
                parameters: [],
                block: Block {
                    nodes: [
                        Statement {
                            statement: Return {
                                expression: Function {
                                    parameters: [],
                                    block: Block {
                                        nodes: [
                                            Statement {
                                                statement: Return {
                                                    expression: Integer {
                                                        literal: 7,
                                                    },
                                                },
                                            },
                                        ],
                                    },
                                },
                            },
                        },
                    ],
                },
            },
        },
        sub_environment: None,
    },
}
