src/tests/call_expression/snapshots/monkey_interpreter__tests__call_expression__test_call_expression_case_12_lexical_analysis.snap
---
source: src/tests/call_expression/mod.rs
expression: tokens
---
[
    Let,
    Identifier {
        literal: "outer",
    },
    Assign,
    Function,
    OpeningRoundBracket,
    ClosingRoundBracket,
    OpeningCurlyBracket,
    Return,
    Function,
    OpeningRoundBracket,
    ClosingRoundBracket,
    OpeningCurlyBracket,
    Return,
    Integer {
        literal: 7,
    },
    SemiColon,
    ClosingCurlyBracket,
    SemiColon,
    ClosingCurlyBracket,
    SemiColon,
    Identifier {
        literal: "outer",
    },
    OpeningRoundBracket,
    ClosingRoundBracket,
    OpeningRoundBracket,
    ClosingRoundBracket,
    SemiColon,
]
