src/tests/call_expression/snapshots/monkey_interpreter__tests__call_expression__test_call_expression_case_12_syntax_analysis.snap
---
source: src/tests/call_expression/mod.rs
expression: abstract_syntax_tree
---
[
    Statement {
        statement: Let {
            identifier: "outer",
            expression: Function {
                parameters: [],
                block: Block {
                    nodes: [
                        Statement {
                            statement: Return {
                                expression: Function {
                                    parameters: [],
                                    block: Block {
                                        nodes: [
                                            Statement {
                                                statement: Return {
                                                    expression: Integer {
                                                        literal: 7,
                                                    },
                                                },
                                            },
                                        ],
                                    },
                                },
                            },
                        },
                    ],
                },
            },
        },
    },
    Expression {
        expression: Call {
            function: Call {
                function: Identifier {
                    identifier: "outer",
                },
                arguments: [],
            },
            arguments: [],
        },
    },
]
