src/tests/call_expression/snapshots/monkey_interpreter__tests__call_expression__test_call_expression_case_13_lexical_analysis.snap
---
source: src/tests/call_expression/mod.rs
expression: tokens
---
[
    Let,
    Identifier {
        literal: "early",
    },
    Assign,
    Function,
    OpeningRoundBracket,
    Identifier {
        literal: "x",
    },
    ClosingRoundBracket,
    OpeningCurlyBracket,
    If,
    OpeningRoundBracket,
    Identifier {
        literal: "x",
    },
    GreaterThan,
    Integer {
        literal: 10,
    },
    ClosingRoundBracket,
    OpeningCurlyBracket,
    Return,
    Identifier {
        literal: "x",
    },
    SemiColon,
    ClosingCurlyBracket,
    Integer {
        literal: 0,
    },
    SemiColon,
    ClosingCurlyBracket,
    SemiColon,
    Identifier {
        literal: "early",
    },
    OpeningRoundBracket,
    Integer {
        literal: 20,
    },
    ClosingRoundBracket,
    Plus,
    Identifier {
        literal: "early",
    },
    OpeningRoundBracket,
    Integer {
        literal: 1,
    },
    ClosingRoundBracket,
    SemiColon,
]
